--- a/views/register.ejs
+++ b/views/register.ejs
@@ -27,6 +27,6 @@
         <p>Already have an account? <a href="#" onclick="goToLogin()">Login here</a></p>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
